--- a/YelpCamp/v4/views/campgrounds/show.ejs
+++ b/YelpCamp/v4/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
-<h1><%= campground.name%></h1>
+<h1><%= campground.name %></h1>
 <img src="<%= campground.image%>">
 <p><%= campground.description%></p>
 
@@ -12,4 +12,5 @@
          <%= comment.text %>
     </p>
 <% }); %>
-<% include partials/footer %>
+<% include ../partials/footer %>
+
